tests/rpm-pkgs/libpsl-0.21.1-4.fc35/output-exp@divine/scan-results.err
Error: COMPILER_WARNING:
libpsl-0.21.1/src/psl.c:1810:15: warning: implicit declaration of function 'nl_langinfo' is invalid in C99
#                        encoding = nl_langinfo(CODESET);
#                                   ^
# 1808|   		if (!encoding) {
# 1809|   #ifdef HAVE_NL_LANGINFO
# 1810|-> 			encoding = nl_langinfo(CODESET);
# 1811|   #elif defined _WIN32
# 1812|   			static char buf[16];
